--- a/并发模型.md
+++ b/并发模型.md
@@ -14,7 +14,7 @@
 
 并发模型如下图：
 
-![并发模型](并发模型图.jpg)
+![并发模型](https://github.com/wangsen1994/web_server/blob/master/datum/model.png)
 
 MainReactor只有一个，其采用非阻塞的socket监听描述符，来负责响应client的连接请求，并建立连接，之后采用Round Robin的方式分配给某个SubReactor,这里会涉及到跨线程任务分配，需要进行加锁，而锁是由每个EventLoop创建的，其只会被该线程和主线程竞争。
 
@@ -33,7 +33,7 @@ Epoll主要有ET与LT两种工作模式，其中ET只能应用于非阻塞IO而L
 
 程序中主要包含三个类：EventLoop、Channel、Epoll、Connection，其事件处理流程如下：
 
-![事件处理流程](事件处理流程.jpg)
+![事件处理流程](https://github.com/wangsen1994/web_server/blob/master/datum/eventloop.png)
 - EventLoop类：One loop per Thread则表示每个线程都有一个EventLoop对象，其一直处于时间循环中，主要负责调用Epoll进行事件收集和拿到活跃事件后将事件分发到各个Channel以及处理任务队列。
 - Epoll类：其主要进行epoll_create、epoll_ctl和epoll_wait这样的系统调用，进行活跃事件的收集以及关心事件的添加与删除等操作。
 - Channel类与Connection类：一个Connection对象包含一个Channel对象，而一个TCP连接由一个Connection对象负责，其中Connection类中主要实现了处理TCP连接的各种回调函数（读写事件、解析HTTP信息等），并将其注册到Channel类中；而Channel类主要与带有读写时间的对象（eventfd、listenfd、connection、timerfd）进行关联，当IO事件活跃时，会根据事件的类型（读写错误）回调相应的函数，实现事件的处理。
