--- a/测试与改进.md
+++ b/测试与改进.md
@@ -18,7 +18,8 @@
 
 ### 测试结果
 
-![test](https://github.com/wangsen1994/web_server/blob/master/datum/test.png)
+
+<div align=center ><img src="https://github.com/wangsen1994/web_server/blob/master/datum/test.png"/></div>
 
 ### 改进
 
